After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 660624 - unbreak build when LC_ADDRESS is not defined
unbreak build when LC_ADDRESS is not defined
Status: RESOLVED FIXED
Product: evolution
Classification: Applications
Component: Contacts
3.2.x (obsolete)
Other OpenBSD
: Normal major
: ---
Assigned To: evolution-addressbook-maintainers
Evolution QA team
Depends on:
Blocks:
 
 
Reported: 2011-10-01 11:54 UTC by Antoine Jacoutot
Modified: 2011-10-01 12:19 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
check if the LC_ADDRESS macro is defined before using it (819 bytes, patch)
2011-10-01 11:54 UTC, Antoine Jacoutot
accepted-commit_now Details | Review

Description Antoine Jacoutot 2011-10-01 11:54:49 UTC
Created attachment 197956 [details] [review]
check if the LC_ADDRESS macro is defined before using it

Hi.

LC_ADDRESS is not posix and may not be defined on all systems (it's not on OpenBSD).
This patch only use setlocale(2) LC_ADDRESS is this macro actually exist.

ok to push?
Comment 1 Matthew Barnes 2011-10-01 12:14:30 UTC
Yes, go ahead.  Thanks for the patch!
Comment 2 Antoine Jacoutot 2011-10-01 12:19:04 UTC
Committed, 328334d9c9eb4c0c9ed249eb33461a0071df9635