LC_ADDRESS is no posix and may not be defined.

Only setlocale(2) LC_ADDRESS is this macro actually exist.
https://bugzilla.gnome.org/show_bug.cgi?id=660624